# django-product-crud

./: .gitignore  Dockerfile  README.md  pyproject.toml
apps/product/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/product/migrations/: 0001_initial.py  0002_product_modified.py  0003_alter_product_options.py
apps/product/templates/: product-create.html  product-delete.html  product-detail.html  product-list.html  product-update.html
apps/product/tests/: test_forms.py  test_models.py  test_tasks.py  test_views.py
config/: celery.py  settings.py  urls.py  validators.py
config/settings/: base.py  dev.py  prod.py
